# agentvet

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  quick_scan.py
cli/: main.py
docs/: ARCHITECTURE.md  SELF_TEST_STANDARD.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Landing.tsx  ScanResult.tsx
scanner/: __init__.py  engine.py  findings.py  l2_filter.py  l3_audit.py  l4_chain.py
scanner/rules/: __init__.py  data_leak.py  frameworks.py  mcp_config.py  prompt_injection.py  secrets.py  supply_chain.py  tool_auth.py
tests/: test_engine.py  test_fixtures.py  test_rules.py
tests/fixtures/: manifest.yaml
tests/fixtures/safe/: fw_001_ok.py  mcp_001_ok.json  pi_001_ok.py  sec_001_ok.py  sec_002_ok.py  ta_001_ok.py
tests/fixtures/vulnerable/: fw_001_no_docker.py  mcp_001_no_auth.json  pi_001_concat.py  sec_001_hardcoded_key.py  sec_002_aws_key.py  ta_001_no_confirm.py
web/: main.py
