[project]
name = "agentvet"
version = "0.4.0"
description = "AI Agent Security Scanner — detect prompt injection, tool auth bypass, data leaks"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
agentvet = "cli.main:main"

[project.optional-dependencies]
web = ["fastapi", "uvicorn"]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
