[project]
name = "agentvet"
version = "0.5.0"
description = "AI Agent Security Scanner — detect prompt injection, tool auth bypass, data leaks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "tlyyxjz", email = "tlyyxjz@users.noreply.github.com"},
]
keywords = [
    "security",
    "ai-agent",
    "llm",
    "prompt-injection",
    "mcp",
    "supply-chain",
    "scanner",
    "claude-code",
    "cursor",
    "agent-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/tlyyxjz/agentvet"
Repository = "https://github.com/tlyyxjz/agentvet"
Issues = "https://github.com/tlyyxjz/agentvet/issues"

[project.scripts]
agentvet = "cli.main:main"

[project.optional-dependencies]
web = ["fastapi", "uvicorn"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["scanner*", "cli*", "web*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
